--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-scroll": "^1.8.9",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
@@ -28,6 +29,7 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
+    "@types/react-scroll": "^1.8.8",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0"
   }
