--- a/app/data/projects.json
+++ b/app/data/projects.json
@@ -101,6 +101,10 @@
       {
         "id": 10,
         "name": "My SQL"
+      },
+      {
+        "id": 15,
+        "name": "Redux"
       }
     ],
     "tag": "Completed",
@@ -157,6 +161,10 @@
         "name": "Reactjs"
       },
       {
+        "id": 5,
+        "name": "Nodejs"
+      },
+      {
         "id": 2,
         "name": "Typescript"
       },
@@ -198,10 +206,10 @@
     ],
     "tag": "Completed",
     "access": "Public",
-    "link": ""
+    "link": "https://tysonmonteiro.com/"
   },
   {
-    "id": 7,
+    "id": 8,
     "name": "Invoice App",
     "description": "A simple yet powerful invoice app, crafted as a challenge from frontendmentor.io. This creation stands as a testament to my prowess in React Context, showcasing intricate user interface design with styled components, and a seamless implementation of CRUD functionalities.",
     "role": "Full-stack Developer",
@@ -209,10 +217,6 @@
       {
         "id": 1,
         "name": "Reactjs"
-      },
-      {
-        "id": 8,
-        "name": "Javascript"
       },
       {
         "id": 16,
