--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.2",
     "react-scroll": "^1.8.9",
+    "redux": "^4.2.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
