--- a/data/projects.json
+++ b/data/projects.json
@@ -216,7 +216,7 @@
     ],
     "tag": "",
     "access": "Public",
-    "link": "https://tysonmonteiro.com/",
+    "link": "https://tysonmonteiro.vercel.app/",
     "image": "/tysonmonteirowebsite.png"
   },
   {
