--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,15 +12,15 @@
   "dependencies": {
     "@redux-devtools/extension": "^3.2.5",
     "@types/node": "20.6.0",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "19.1.15",
+    "@types/react-dom": "19.1.9",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "eslint-config-next": "15.5.4",
+    "next": "15.5.4",
     "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
     "react-scroll": "^1.8.9",
@@ -35,5 +35,9 @@
     "@types/react-scroll": "^1.8.8",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0"
+  },
+  "overrides": {
+    "@types/react": "19.1.15",
+    "@types/react-dom": "19.1.9"
   }
 }
