--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.6.0",
     "@types/react": "19.1.15",
     "@types/react-dom": "19.1.9",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "15.5.4",
