--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "test": "jest --watch"
   },
   "dependencies": {
@@ -35,7 +35,8 @@
     "@types/jest": "^29.5.4",
     "@types/react-scroll": "^1.8.8",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "@eslint/eslintrc": "^3"
   },
   "overrides": {
     "@types/react": "19.1.15",
