--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,8 @@ jobs:
             - name: Lint
               run: npm run lint
 
+            - name: Run tests
+              run: npm run test
+
             - name: Build app
               run: npm run build
