--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   },
   "overrides": {
     "@types/react": "19.1.15",
-    "@types/react-dom": "19.1.9"
+    "@types/react-dom": "19.1.9",
+    "react": "19.1.1",
+    "react-dom": "19.1.1"
   }
 }
