--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "15.5.4",
+    "lucide-react": "^0.561.0",
     "next": "15.5.7",
     "postcss": "8.4.29",
     "react": "19.1.1",
@@ -30,13 +31,13 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
     "@types/react-scroll": "^1.8.8",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "@eslint/eslintrc": "^3"
+    "jest-environment-jsdom": "^29.7.0"
   },
   "overrides": {
     "@types/react": "19.1.15",
